cluster-addons/istio-gateways/common/istio-default-ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: istio-gw-ingress
  namespace: default
spec:
  selector:
    matchLabels:
      app: istio-gw-ingress
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: istio-gw-ingress
        aadpodidbinding: default-pod-identity 
    spec:
      containers:
      - name: istio-gw-ingress
        image: nginx:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: istio-gw-svc
  namespace: default
  labels:
    version: "1.0"
spec:
  selector:
    app: istio-gw-ingress
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
