cluster-addons/istio-gateways/common/istio-gateways.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: cross-network-gateway
  namespace: istio-system
spec:
  selector:
    istio: eastwestgateway
  servers:
    - port:
        number: 15443
        name: tls
        protocol: TLS
      tls:
        mode: AUTO_PASSTHROUGH
      hosts:
        - "*.local"
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: default-bjdazure-tech-gw
  namespace: default
spec:
  selector:
    istio: ingressgateway 
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*.bjdazure.tech"
  - port:
      number: 80
      name: http-serving
      protocol: HTTP
    hosts:
    - "*.knative.bjdazure.tech"
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: istio-ingress-tls
    hosts:
    - "*.bjdazure.tech"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name:  default-bjdazure-tech-vs
  namespace: default
spec:
  hosts:
  -  istio-default.bjdazure.tech
  gateways:
  -  default-bjdazure-tech-gw
  http:
  - route:
    - destination:
        host: istio-gw-svc
        port:
          number: 80
